--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
+:root {
+  --primary-color: #c65d7b;
+  --secundary-color: #874356;
+  --third-color: #f68989;
+  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+body {
+  margin: 60px auto;
+  max-width: 900px;
+}
+
 h1,
 h2,
 h3 {
@@ -17,12 +29,60 @@ h3 {
   opacity: 0.7;
 }
 
-.contact-link {
+.buttons-link {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: 40px;
 }
 
-.buttons-link a{
-    border: 1px solid #;
+.buttons-link a {
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+  padding: 20px 15px;
+  margin: 20px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.contact-link {
+  background-color: var(--primary-color);
+  color: #fff;
+  box-shadow: var(--box-shadow);
+}
+
+.about-link {
+  color: var(--primary-color);
+}
+
+.homepage-link {
+  display: block;
+  text-align: center;
+  color: var(--secundary-color);
+}
+
+p {
+  background-color: var(--third-color);
+  padding: 20px;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.about-paragraph {
+  display: flex;
+  justify-content: center;
+  margin: 30px 0;
+}
+
+.about-paragraph p {
+  margin: 10px;
+}
+
+.email-link {
+  display: flex;
+  justify-content: center;
+  color: var(--secundary-color);
+  font-size: 25px;
+  text-decoration: none;
 }
